[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Modeseven-L3n5.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/login/login.gd" type="Script" id=2]
[ext_resource path="res://themes/smalltheme.tres" type="DynamicFont" id=3]
[ext_resource path="res://themes/ttheme.tres" type="Theme" id=4]
[ext_resource path="res://backgrounds/background6.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 1 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -71.5
margin_right = 84.0
margin_bottom = 71.5

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 156.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_right = 166.0
margin_bottom = 149.0
custom_constants/separation = 3

[node name="l_user" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 166.0
margin_bottom = 17.0
text = "Username"
align = 1

[node name="user_in" type="LineEdit" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 166.0
margin_bottom = 50.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )

[node name="l_password" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 166.0
margin_bottom = 70.0
text = "Password"
align = 1

[node name="pass_in" type="LineEdit" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 166.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 2 )
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 166.0
margin_bottom = 129.0
custom_constants/separation = 32
alignment = 1

[node name="b_create" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 23.0
text = "Create"

[node name="b_login" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 166.0
margin_bottom = 23.0
text = "Login"

[node name="console" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 166.0
margin_bottom = 149.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 100, 15 )
align = 1
valign = 1

[node name="WindowDialog" type="WindowDialog" parent="PanelContainer/CenterContainer"]
margin_left = -117.0
margin_top = -126.0
margin_right = 283.0
margin_bottom = 274.0
rect_min_size = Vector2( 400, 400 )
popup_exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/WindowDialog"]
margin_left = 92.0
margin_top = 70.0
margin_right = 306.0
margin_bottom = 308.0

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_right = 214.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Username"
align = 1

[node name="Label4" type="Label" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 24.0
margin_right = 214.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 3 )
text = "*Visable Name Can Be Set Later"
align = 1

[node name="reg_user_in" type="LineEdit" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 38.0
margin_right = 214.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )

[node name="Label2" type="Label" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 72.0
margin_right = 214.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "Password"
align = 1

[node name="reg_pass_in" type="LineEdit" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 96.0
margin_right = 214.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 3 )
secret = true

[node name="Label5" type="Label" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 130.0
margin_right = 214.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 3 )
text = "Confirm"
align = 1

[node name="pass_confirm" type="LineEdit" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 154.0
margin_right = 214.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 3 )
secret = true

[node name="b_register" type="Button" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 188.0
margin_right = 214.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 3 )
text = "Register"

[node name="reg_console" type="Label" parent="PanelContainer/CenterContainer/WindowDialog/VBoxContainer"]
margin_top = 218.0
margin_right = 214.0
margin_bottom = 238.0
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/b_create" to="." method="_on_create_account_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/b_login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/WindowDialog/VBoxContainer/b_register" to="." method="_on_b_register_pressed"]
